# family-website

./: Dockerfile  app.py  pyproject.toml  utils.py
.github/workflows/: main.yml
config/archive/: josh.yml
config/family/: sarah.yml
public/css/: family.css  header.css  index.css  person.css
templates/: background.html  base.html  family.html  header.html  index.html  person.html
